hphp/test/zend/bad/not_002.php
<?php

$a = array(1,2,3);
$b = array(1,2);

$a = ~$b;
var_dump($a);

echo "Done\n";
?>